Fix tinymce dark mode bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,9 @@
   margin: 0 !important;
   padding: 0 !important;
 }
+:root[class*="dark"] .prose * {
+  color: white;
+}
 
 html,
 body,
